# tauri-plugin-orientation

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
android/: build.gradle.kts
android/src/main/java/: FullScreenManager.kt  FullScreenPlugin.kt  OrientationManager.kt  OrientationPlugin.kt
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: package.json  pnpm-lock.yaml  rebuild-android.sh
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: OrientationControl.svelte
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: full.toml  restore_orientation.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
