[package]
name = "tauri-plugin-orientation"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-orientation"

[dependencies]
tauri = { version = "2.9.4" }
serde = "1.0"
thiserror = "2"
serde_repr = "0.1.20"
schemars = "0.8"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
schemars = "0.8"
